bugfix: bad display of popular hostings on IE (due to useless flex display)

--- a/css/ie-main.css
+++ b/css/ie-main.css
@@ -476,11 +476,6 @@ h2.standfirst {
   font-size: 1.6rem;
 }
 
-.popular-hostings__articles {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .town-hostings {
   flex: 9;
 
